--- a/src/styles.css
+++ b/src/styles.css
@@ -82,7 +82,7 @@
   padding: 10px;
   box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.4);
   overflow:auto;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.7) ;
   border-radius: 5px;
   background: linear-gradient(to right,
      rgba(255,255,255, 1) 50%, 
@@ -115,17 +115,17 @@
 }
 
 .item button:hover {
-  background-color: lightgray;
+  background-color: rgba(163, 188, 191, 0.7);
 }
 
 .item-right {
   float: right;
-  width: 35%;
+  width: 47%;
 }
 
 .item-left {
   float: left;
-  max-width: 65%;
+  max-width: 70%;
 }
 
 .item-left-big {
@@ -135,7 +135,7 @@
 
 .clickable:hover div {
   transition: transform .4s;
-  background: rgb(211, 211, 211, 0.5)
+  background: rgba(163, 188, 191, 0.7)
 }
 
 .pop-up-box {
@@ -145,9 +145,9 @@
   left: 50%;
   width: 30%;
   padding: 20px;
-  background: white;
+  background: rgba(255, 255, 255, 0.85) ;
   text-align: center;
-  box-shadow: 4px 4px 10px #000;
+  box-shadow: 2px 2px 10px #000;
   transform: translate(-50%, -50%);
   -webkit-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
@@ -186,17 +186,17 @@
 }
 
 h1 {
-    color: #369;
-    font-family: Arial, Helvetica, sans-serif;
+    color: #03414d;
+    font-family: Shopify Sans Web,Roboto,Segoe UI,Helvetica Neue,sans-serif;
     font-size: 250%;
   }
 
 h2, h3 {
-    color: #444;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
-    margin-left: 20px;
-    margin-right: 20px;
+  font-family: Shopify Sans Web,Roboto,Segoe UI,Helvetica Neue,sans-serif;
+  font-weight: 500;
+  color: #03414d;
+  margin-left: 10px;
+  margin-right: 10px;
   }
 
 body {
@@ -206,12 +206,15 @@ body {
   
 body, input[type="text"], button {
     color: #333;
-    font-family: Cambria, Georgia;
+    font-family: Shopify Sans Web,Roboto,Segoe UI,Helvetica Neue,sans-serif;
+    color: #03414d;
   }
 
   /* everywhere else */
   * {
     font-family: Arial, Helvetica, sans-serif;
+    font-family: Shopify Sans Web,Roboto,Segoe UI,Helvetica Neue,sans-serif;
+    color: #03414d;
   }
 
 @media only screen and (max-width: 1000px) {
@@ -223,6 +226,18 @@ body, input[type="text"], button {
 
 
 
+
+.header_center {
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 150px;
+  font-family: Shopify Sans Web,Roboto,Segoe UI,Helvetica Neue,sans-serif;
+  color: #03414d;
+  text-align: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
 
 .search {
 background-color: rgba(163, 188, 191, 0.6);
@@ -239,7 +254,13 @@ border-radius: 5px;
 }
 
 
-
+html {
+  background-image: url(canstockphoto45204351.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  }
 
 
 @media all and (max-width:750px) {
